# OpenCV

./: .gitignore
mefedov_a_m/: CMakeLists.txt  README.md  build.vs.2019.cmake
mefedov_a_m/data/: video2.MOV
mefedov_a_m/prj.labs/: CMakeLists.txt
mefedov_a_m/prj.labs/kontrTask/: CMakeLists.txt  kontrTask.cpp  kontrTask.report.md.in.txt
mefedov_a_m/prj.labs/lab01/: lab01.cpp  lab01.report.md.in.txt
mefedov_a_m/prj.labs/lab02/: lab02.cpp  lab02.report.md.in.txt
mefedov_a_m/prj.labs/lab03/: lab03.cpp  lab03.report.md.in.txt
mefedov_a_m/prj.labs/lab04/: lab04.cpp  lab04.report.md.in.txt
mefedov_a_m/prj.labs/lab05/: lab05.report.md.in.txt
